[package]
name = "lora-wl"
version = "0.1.0"
edition = "2018"
authors = ["Jorge Iglesias <jorge@munin.space>"]

[dependencies]
cortex-m-rtic = { version = "0.5.8", default-features = false, features = ["cortex-m-7"] }
cipher = "0.3"
cmac = "0.6"
defmt = "0.3"
defmt-rtt = "0.3"
defmt-test = "0.3"
generic-array = "0.14"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[dependencies.stm32wlxx-hal]
version = "0.2"
features = ["rt", "stm32wl5x_cm4", "defmt"]

[dependencies.lorawan-device]
git = "https://github.com/ivajloip/rust-lorawan.git"
rev = "53d2feb43e2f3ddcdc55f0587391b0d3f02d8d93"
features = ["withdefmt"]

[dependencies.lorawan-encoding]
git = "https://github.com/ivajloip/rust-lorawan.git"
rev = "53d2feb43e2f3ddcdc55f0587391b0d3f02d8d93"
default-features = false
